--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.1.3",
-    "antd": "^4.6.2",
+    "@types/react-dom": "^16.9.8",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
+    "antd": "^4.6.2",
     "clsx": "^1.1.1",
     "fontsource-roboto": "^3.0.3",
     "react": "^16.13.1",
